2006-12-10  Timothy Brownawell <tbrownaw@gmail.com>

	Implement a "mtn log --to <revision>", that doesn't log the
	revisions that would be logged when <revision> was given as
	the starting revision.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua:
	Don't forget to get() read-permissions and write-permissions.
	Also, netsync.start should use the full blown netsync.lua,
	not the minimal start.

2006-12-09  Richard Levitte  <richard@levitte.org>

	* tests/netsync_permissions_wildcards/__driver__.lua,
	tests/netsync_permissions_wildcards/read-permissions,
	tests/netsync_permissions_wildcards/write-permissions,
	testsuite.lua: Test how well netsync works when read-permissions
	contains wildcards as part of the pattern.

2006-12-08  Richard Levitte  <richard@levitte.org>

	* INSTALL: A build failure showed me I needed to install
	libboost-serialization-dev, so let's share that information.

2006-12-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (delete_existing_rev_and_certs): When killing a
	revision, also remove it's height from the database.

2006-12-06  Thomas Keller <me@thomaskeller.biz>

	Existing test for previous change in author cert selection
	tweaked (previously b_and_t_selector_globbing)

2006-12-06  Timothy Brownawell  <tbrownaw@gmail.com>

	Version 1.34 of boost changes some things. In particular fs::path
	is now a typedef (breaks the declaration we had in vocab.hh), and
	some of our exceptions are different.

	Remove the vocab.hh declaration of fs::path, and #if/#else some things in
	file_io.cc to handle the changing names.

2006-12-05  Thomas Keller  <me@thomaskeller.biz>

	* database.cc: removed implicit wildcards for author cert selections

2006-12-04  Matthew Nicholson  <matt@matt-land.com>

	* ChangeLog: Fixed name on previous entry.

2006-12-04  Matthew Nicholson  <matt@matt-land.com>

	* contrib/monotone.bash_completion: Updated and reformated some what.